<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>premium-markets</artifactId>
	<groupId>com.finance.pm</groupId>
	<version>0.0.1-SNAPSHOT</version>
  </parent>
  <artifactId>pm-uiinstall</artifactId>
  <name>pm-uiinstall</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <pm.buildtime>${timestamp}</pm.buildtime>
  </properties>
	<dependencies>
		<dependency>
			<groupId>com.finance.pm</groupId>
		  <artifactId>pm-connectchecker</artifactId>
		  <version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.nexes</groupId>
			<artifactId>wizard</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.swinglabs</groupId>
			<artifactId>swing-worker</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.ant</groupId>
			<artifactId>ant</artifactId>
			<version>1.8.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
			<version>10.14.2.0</version>
		</dependency>
		 <dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.4</version>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>copy-dependencies-to-lib</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
							<excludeTransitive>true</excludeTransitive>
						</configuration>
					</execution>
				</executions>
			</plugin>
<!-- 			<plugin> -->
<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
<!-- 				<artifactId>maven-jarsigner-plugin</artifactId> -->
<!-- 				<version>1.2</version> -->
<!-- 				<executions> -->
<!-- 					<execution> -->
<!-- 						<id>sign</id> -->
<!-- 						<phase>install</phase> -->
<!-- 						<goals> -->
<!-- 							<goal>sign</goal> -->
<!-- 						</goals> -->
<!-- 					</execution> -->
<!-- 				</executions> -->
<!-- 				<configuration> -->
<!-- 			          <verbose>false</verbose> -->
<!-- 			    </configuration> -->
<!-- 			</plugin> -->
		</plugins>
			<pluginManagement>
		<plugins>
			<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
			<plugin>
				<groupId>org.eclipse.m2e</groupId>
				<artifactId>lifecycle-mapping</artifactId>
				<version>1.0.0</version>
				<configuration>
					<lifecycleMappingMetadata>
						<pluginExecutions>
							<pluginExecution>
								<pluginExecutionFilter>
									<groupId>
										com.keyboardsamurais.maven
									</groupId>
									<artifactId>
										maven-timestamp-plugin
									</artifactId>
									<versionRange>[1.0,)</versionRange>
									<goals>
										<goal>create</goal>
									</goals>
								</pluginExecutionFilter>
								<action>
									<ignore></ignore>
								</action>
							</pluginExecution>
							<pluginExecution>
								<pluginExecutionFilter>
									<groupId>
										org.antlr
									</groupId>
									<artifactId>
										antlr3-maven-plugin
									</artifactId>
									<versionRange>[1.0,)</versionRange>
									<goals>
										<goal>antlr</goal>
									</goals>
								</pluginExecutionFilter>
								<action>
									<ignore></ignore>
								</action>
							</pluginExecution>
						</pluginExecutions>
					</lifecycleMappingMetadata>
				</configuration>
			</plugin>
		</plugins>
	</pluginManagement>
	</build>
	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
					    <groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>2.4</version>
						<executions>
							<execution>
								<id>copy-initialdb-to-target</id>
								<phase>package</phase>
								<goals>
									<goal>copy</goal>
								</goals>
								<configuration>
									<artifactItems>
									 	<artifactItem>
											<groupId>com.finance.pm</groupId>
	  										<artifactId>pm-uiinstall</artifactId>
	  										<version>0.0.1-SNAPSHOT</version>
	  										<type>tar.bz2</type>
	  										<classifier>initialdb</classifier>
	  										<destFileName>pmdb-initialdb.tar.bz2</destFileName>
  										</artifactItem>
									</artifactItems>
									<outputDirectory>${project.build.directory}</outputDirectory>
									<overWriteReleases>false</overWriteReleases>
									<overWriteSnapshots>false</overWriteSnapshots>
									<overWriteIfNewer>true</overWriteIfNewer>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<executions>
							<execution>
								<id>allinone_jar</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<finalName>pminstall</finalName>
									<archive>
										<manifest>
											<mainClass>com.finance.pms.admin.install.wizard.Install</mainClass>
										</manifest>
									</archive>
									<outputDirectory>${project.build.directory}</outputDirectory>
									<descriptors>
										<descriptor>assembly/allinone.xml</descriptor>
									</descriptors>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>initdb-pmuidb</id>
			<activation>
				<property>
					<name>initdb</name>
					<value>pmuidb</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<executions>
							<execution>
								<id>initialdb_tar</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<finalName>pmdb</finalName>
									<!-- <appendAssemblyId>false</appendAssemblyId> -->
									<descriptors>
										<descriptor>assembly/initialdb.xml</descriptor>
									</descriptors>
								</configuration>
							</execution>
							<execution>
								<id>allinone_jar</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<finalName>pminstall</finalName>
									<archive>
										<manifest>
											<mainClass>com.finance.pms.admin.install.wizard.Install</mainClass>
										</manifest>
									</archive>
									<outputDirectory>${project.build.directory}</outputDirectory>
									<descriptors>
										<descriptor>assembly/allinone.xml</descriptor>
									</descriptors>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<repositories>
		<repository>
        	        <id>pmRepo</id>
        	        <url>http://www.premiummarkets.uk/mvnRepository</url>
    		</repository>
		<repository>
			<id>mvn</id>
			<name>mvn</name>
			<url>http://mvnrepository.com/artifact</url>
		</repository>
		<repository>
			<id>maven2</id>
			<name>maven2</name>
			<url>http://repo2.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>google</id>
			<name>google</name>
			<url>http://google-gson.googlecode.com/svn/mavenrepo</url>
		</repository>
		<repository>
			<id>com.springsource.repository.bundles.release</id>
			<name>EBR Spring Release Repository</name>
			<url>http://repository.springsource.com/maven/bundles/release</url>
		</repository>
		<repository>
			<id>com.springsource.repository.bundles.external</id>
			<name>EBR External Release Repository</name>
			<url>http://repository.springsource.com/maven/bundles/external</url>
		</repository>
	</repositories>
</project>
